--- a/Assignment_12.ipynb
+++ b/Assignment_12.ipynb
@@ -95,12 +95,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RgASwnsdFbA4",
-        "outputId": "cc72d3c9-922c-4f53-a355-1a94d57a6722",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 253
-        }
+        },
+        "id": "RgASwnsdFbA4",
+        "outputId": "cc72d3c9-922c-4f53-a355-1a94d57a6722"
       },
       "source": [
         "train.head()"
@@ -659,12 +659,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r7Na2tQE2_S6",
-        "outputId": "a95a370c-0b55-469f-d931-19a7bedafd2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 344
-        }
+        },
+        "id": "r7Na2tQE2_S6",
+        "outputId": "a95a370c-0b55-469f-d931-19a7bedafd2a"
       },
       "source": [
         "#show sale price distribution\n",
@@ -700,12 +700,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vBfgLwUlFbfZ",
-        "outputId": "55c4c8fe-5fb7-4e07-c4f1-ad8f3c645872",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
-        }
+        },
+        "id": "vBfgLwUlFbfZ",
+        "outputId": "55c4c8fe-5fb7-4e07-c4f1-ad8f3c645872"
       },
       "source": [
         "test.head()#column sale price is missing"
@@ -1270,11 +1270,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GkRg8IDQGFx_",
-        "outputId": "58129adc-2d46-4ab8-bf14-0eda5d4cfa6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GkRg8IDQGFx_",
+        "outputId": "58129adc-2d46-4ab8-bf14-0eda5d4cfa6e"
       },
       "source": [
         "\n",
@@ -1344,11 +1344,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Us4_KbqJe_1e",
-        "outputId": "12ff519f-3368-46b9-f7e1-899be6f32dfd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Us4_KbqJe_1e",
+        "outputId": "12ff519f-3368-46b9-f7e1-899be6f32dfd"
       },
       "source": [
         "#Linear regression model\n",
@@ -1399,12 +1399,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zRvj_TxTo8jh",
-        "outputId": "8c918a0b-1583-4bcb-cfa7-b979a5777446",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        }
+        },
+        "id": "zRvj_TxTo8jh",
+        "outputId": "8c918a0b-1583-4bcb-cfa7-b979a5777446"
       },
       "source": [
         "plt.plot(max_features,scores)\n",
@@ -1456,132 +1456,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9R9mwr982Jmi",
-        "outputId": "a2bb10a4-3fbc-49b9-d4e4-76d21324abf5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        }
+        "id": "9R9mwr982Jmi"
       },
       "source": [
         "submission = pd.DataFrame()\n",
         "submission['Id'] = X_test.Id\n",
         "submission['SalePrice'] = final\n",
         "\n",
-        "submission"
+        "submission.to_csv('final.csv')"
       ],
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Id</th>\n",
-              "      <th>SalePrice</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>1460</th>\n",
-              "      <td>1461</td>\n",
-              "      <td>127535.9935</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1461</th>\n",
-              "      <td>1462</td>\n",
-              "      <td>153636.7060</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1462</th>\n",
-              "      <td>1463</td>\n",
-              "      <td>177929.9345</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1463</th>\n",
-              "      <td>1464</td>\n",
-              "      <td>184235.2585</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1464</th>\n",
-              "      <td>1465</td>\n",
-              "      <td>196030.3190</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2914</th>\n",
-              "      <td>2915</td>\n",
-              "      <td>85956.6945</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2915</th>\n",
-              "      <td>2916</td>\n",
-              "      <td>87334.0140</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2916</th>\n",
-              "      <td>2917</td>\n",
-              "      <td>153355.8950</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2917</th>\n",
-              "      <td>2918</td>\n",
-              "      <td>111394.2355</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2918</th>\n",
-              "      <td>2919</td>\n",
-              "      <td>229721.0325</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>1459 rows × 2 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "        Id    SalePrice\n",
-              "1460  1461  127535.9935\n",
-              "1461  1462  153636.7060\n",
-              "1462  1463  177929.9345\n",
-              "1463  1464  184235.2585\n",
-              "1464  1465  196030.3190\n",
-              "...    ...          ...\n",
-              "2914  2915   85956.6945\n",
-              "2915  2916   87334.0140\n",
-              "2916  2917  153355.8950\n",
-              "2917  2918  111394.2355\n",
-              "2918  2919  229721.0325\n",
-              "\n",
-              "[1459 rows x 2 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 40
-        }
-      ]
+      "execution_count": 43,
+      "outputs": []
     }
   ]
 }
